--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
-title: Installation | Gluestack UI
-description: A Quick Installation guide for Gluestack UI
+title: Installation | gluestack-ui
+description: A Quick Installation guide for gluestack-ui
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
@@ -105,7 +105,7 @@ module.exports = withGluestackUI(nextConfig);
 
 ## Summary
 
-In this guide, we've walked you through the process of installing Gluestack UI and adding a Button component to your project using the npx command. With Gluestack UI, you can benefit from a library of accessible and composable UI components that work seamlessly on mobile and web platforms.
+In this guide, we've walked you through the process of installing gluestack-ui and adding a Button component to your project using the npx command. With gluestack-ui, you can benefit from a library of accessible and composable UI components that work seamlessly on mobile and web platforms.
 
 The library follows WAI-ARIA authoring practices guidelines, making it accessible to a wide range of users.
-It provides both controlled and uncontrolled options for maximum flexibility. The focus is fully managed and customizable, and the dismissing and layering behavior can be highly customized as well. With Gluestack UI, you can create high-quality UI components with ease.
+It provides both controlled and uncontrolled options for maximum flexibility. The focus is fully managed and customizable, and the dismissing and layering behavior can be highly customized as well. With gluestack-ui, you can create high-quality UI components with ease.
