--- a/example/storybook/src/overview/Accessibility/index.stories.mdx
+++ b/example/storybook/src/overview/Accessibility/index.stories.mdx
@@ -1,6 +1,6 @@
 ---
-title: Accessibility | Glustack UI
-description: Glustack UI is a React library that provides universal, unstyled, and accessible components. It includes keyboard accessibility and focus management features, making it a great choice for developers who prioritize accessibility and usability.
+title: Accessibility | gluestack-ui
+description: Gluestack-ui is a React library that provides universal, unstyled, and accessible components. It includes keyboard accessibility and focus management features, making it a great choice for developers who prioritize accessibility and usability.
 ---
 
 import { Canvas, Meta, Story } from '@storybook/addon-docs';
@@ -9,11 +9,11 @@ import { Canvas, Meta, Story } from '@storybook/addon-docs';
 
 # Accessibility
 
-Accessibility is an important aspect of web development, and at Gluestack UI, we strive to make our components accessible to all users. In this section, we will discuss the accessibility features of our components
+Accessibility is an important aspect of web development, and at gluestack-ui, we strive to make our components accessible to all users. In this section, we will discuss the accessibility features of our components
 
 ### WAI-ARIA Guidelines
 
-Gluestack UI follows the WAI-ARIA Authoring Practices guidelines to ensure our components are accessible to users of assistive technologies. The WAI-ARIA Authoring Practices document provides guidance on how to create accessible widgets, navigation, and behaviors using WAI-ARIA roles, states, and properties.
+gluestack-ui follows the WAI-ARIA Authoring Practices guidelines to ensure our components are accessible to users of assistive technologies. The WAI-ARIA Authoring Practices document provides guidance on how to create accessible widgets, navigation, and behaviors using WAI-ARIA roles, states, and properties.
 
 ### Browser and Assistive Technology Testing
 
@@ -21,7 +21,7 @@ We test our components in a wide selection of modern browsers and commonly used 
 
 ### Accessible Component Props
 
-Gluestack UI components come with built-in accessibility features such as keyboard navigation and support for screen readers. We provide additional accessibility props for our components, such as aria-label, aria-labelledby, aria-describedby, role, tabIndex, and more.
+gluestack-ui components come with built-in accessibility features such as keyboard navigation and support for screen readers. We provide additional accessibility props for our components, such as aria-label, aria-labelledby, aria-describedby, role, tabIndex, and more.
 
 ### Keyboard Accessibility
 
