--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -54,6 +54,23 @@ function App() {
 }
 ```
 
+## Commands provided by gluestack-ui
+
+```bash
+Init gluestack-ui: npx gluestack-ui init
+
+Init and add components: npx gluestack-ui
+
+Add component: npx gluestack-ui add <component-name>
+
+Update component: npx gluestack-ui update <component-name>
+
+Remove component: npx gluestack-ui remove <component-name>
+
+Help: npx gluestack-ui help
+
+```
+
 This will render a button component that can be clicked and will display an alert when clicked.
 
 ### For Next Projects
