--- a/example/storybook/src/overview/Introduction/index.stories.mdx
+++ b/example/storybook/src/overview/Introduction/index.stories.mdx
@@ -34,7 +34,7 @@ React Native Web is great! gluestack-ui needs React Native Web’s “components
 
 gluestack-ui builds upon the React Native Web components by adding accessibility props, focus management, and other functionality to ensure that the components are accessible and performant.
 
-## Why Use Gluestack, When We Already Have NativeBase?
+## Why use gluestack-ui, when we already have NativeBase?
 
 gluestack-ui was originally part of NativeBase, but it has since evolved into a standalone library focused solely on accessibility. Unlike NativeBase, which is a complete component library that includes styling, accessibility, and a default theme, gluestack-ui focuses specifically on accessibility.
 
