--- a/example/storybook/src/getting-started/Installation/index.stories.mdx
+++ b/example/storybook/src/getting-started/Installation/index.stories.mdx
@@ -56,19 +56,40 @@ function App() {
 
 ## Commands provided by gluestack-ui
 
+### Init gluestack-ui
+
 ```bash
-Init gluestack-ui: npx gluestack-ui init
+ npx gluestack-ui init
+```
 
-Init and add components: npx gluestack-ui
+### Init and add components
 
-Add component: npx gluestack-ui add <component-name>
+```bash
+  npx gluestack-ui
+```
 
-Update component: npx gluestack-ui update <component-name>
+### Add component
 
-Remove component: npx gluestack-ui remove <component-name>
+```bash
+ npx gluestack-ui add <component-name>
+```
 
-Help: npx gluestack-ui help
+### Update component
 
+```bash
+ npx gluestack-ui update <component-name>
+```
+
+### Remove component
+
+```bash
+  npx gluestack-ui remove <component-name>
+```
+
+### Help
+
+```bash
+  npx gluestack-ui help
 ```
 
 This will render a button component that can be clicked and will display an alert when clicked.
