--- a/example/storybook/src/components/Icon/index.stories.mdx
+++ b/example/storybook/src/components/Icon/index.stories.mdx
@@ -201,14 +201,7 @@ We have a function called `createIcon` which can be used to create a custom icon
 
 ```jsx
 // import the styles
-import {
-  Root,
-  Text,
-  Group,
-  GroupHSpacer,
-  GroupVSpacer,
-  Spinner,
-} from '../ui-components/Icon/styled-components';
+import { Root } from '../ui-components/Icon/styled-components';
 
 // import the createIcon function
 import { createIcon } from '@gluestack-ui/icon';
@@ -216,11 +209,6 @@ import { createIcon } from '@gluestack-ui/icon';
 // Understanding the API
 const Icon = createIcon({
   Root,
-  Text,
-  Group,
-  GroupHSpacer,
-  GroupVSpacer,
-  Spinner,
 });
 
 // Using the icon component
